[tool.poetry]
name = "signal-server"
version = "0.1.0"
description = ""
authors = ["hyeonho cho <111675679+aesthetics-of-record@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
python-socketio = "^5.11.3"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
